Fix SVG alignment in Safari

--- a/src/arm-immediate-value-encoding/style.scss
+++ b/src/arm-immediate-value-encoding/style.scss
@@ -33,7 +33,10 @@
   }
 }
 
-form, svg {
+form {
   display: flex;
+}
+
+form, svg {
   margin: 1.5em auto;
 }
